# niftygate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  package.json
docker/: Dockerfile
docs/: crowdfunding.md  crowdsale.md  developer-coop.md
examples/: dummy-service.rs  ethereum.rs  generate-contract-bindings.rs  proxy.rs
internal/: log4rs.yaml  rs2js.sed
niftygate/: Cargo.toml
niftygate-asset/: Cargo.toml  README.md
niftygate-asset/src/: asset_path.rs  lib.rs  main.rs  manager.rs  pattern.rs  ui.rs  vfs.rs
niftygate-asset/src/checksum/: algorithm.rs  keccak256.rs  mod.rs  policy.rs  sha256.rs
niftygate-asset/src/command/: cache.rs  command.rs  mod.rs
niftygate-asset/src/command/solidity/: artifact.rs  command.rs  mod.rs
niftygate-asset/src/compatibility/: file_type.rs  metadata.rs  mod.rs  path.rs
niftygate-asset/src/compression/: algorithm.rs  brotli.rs  compression.rs  deflate.rs  lz4.rs  mod.rs  uncompressed.rs
niftygate-asset/src/download/: caching.rs  downloader.rs  local.rs  mod.rs  surf.rs
niftygate-asset/src/download/policy/: enforcer.rs  mod.rs
niftygate-asset/src/iter/: filter.rs  map.rs  mod.rs
niftygate-asset/src/solidity/: manifest.rs  metadata.rs  mod.rs
niftygate-asset/src/solidity/artifact/: artifact.rs  emscripten.rs  extract.rs  mod.rs  overview.rs  wasm.rs
niftygate-asset/src/storage/: compressed.rs  direct.rs  mod.rs  policy.rs  progress.rs  storage.rs  vfs.rs
niftygate-bindgen/: Cargo.toml  package.json
niftygate-bindgen/src/: main.rs
niftygate-bindings/: Cargo.toml
niftygate-bindings/src/: lib.rs
niftygate-bindings/src/benber86/: mod.rs
niftygate-bindings/src/benber86/nft_royalties_market/: generated.rs  mod.rs
niftygate-bindings/src/openzeppelin/: mod.rs
niftygate-bindings/src/openzeppelin/contracts_legacy/: generated.rs  mod.rs
niftygate-bindings/src/openzeppelin/contracts_upgradeable/: generated.rs
niftygate-certificate/: Cargo.toml
niftygate-certificate/src/: command.rs  constants.rs  lib.rs  load.rs  main.rs  parse.rs
niftygate-certificate/src/command/: generate.rs
niftygate-contract/: Cargo.toml
niftygate-contract/src/: command.rs  lib.rs  main.rs
niftygate-contract/src/command/: erc1155_preset_minter_pauser.rs  erc20_preset_fixed_supply.rs  erc20_preset_minter_pauser.rs  erc721_preset_minter_pauser_auto_id.rs  erc777_preset_fixed_supply.rs
niftygate-contract/src/command/experimental/: crowdsale.rs  marketplace.rs  mod.rs  royalties_payment.rs  token.rs
niftygate-contract/src/command/finance/: mod.rs  payment_splitter.rs
niftygate-guide/: Cargo.toml
niftygate-guide/src/: command.rs  lib.rs  main.rs
niftygate/examples/: ethereum.rs  generate-contract-bindings.rs
niftygate/src/: command.rs  lib.rs  main.rs
niftygate/src/application/: demo.rs  proxy.rs
niftygate/src/command/: contract.rs  demo.rs  guide.rs  units.rs  web3.rs
niftygate/src/command/contract/: dump.rs  erc1155_preset_minter_pauser.rs  erc20_preset_fixed_supply.rs  erc20_preset_minter_pauser.rs  erc721_preset_minter_pauser_auto_id.rs  erc777_preset_fixed_supply.rs
niftygate/src/middleware/: authorization.rs  mod.rs  proxy.rs
niftygate/src/middleware/ethereum/: account.rs  balance.rs  erc20.rs  erc721.rs  erc777.rs
niftygate/src/openzeppelin/contracts/: mod.rs
src/: command.rs  lib.rs  main.rs
src/application/: mod.rs  proxy.rs
src/command/: contract.rs
src/command/contract/: erc1155_preset_minter_pauser.rs  erc20_preset_fixed_supply.rs  erc20_preset_minter_pauser.rs  erc721_preset_minter_pauser_auto_id.rs  erc777_preset_fixed_supply.rs
src/middleware/: headers.rs  proxy.rs
src/middleware/ethereum/: account.rs  balance.rs  erc1155.rs  mod.rs  signature.rs
src/openzeppelin/: mod.rs
src/openzeppelin/contracts/: generated.rs  mod.rs
src/openzeppelin/contracts_upgradeable/: generated.rs  mod.rs
