[package]
name = "sig-proxy"
version = "0.1.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/sig-proxy/"
description = "Signature-Based (Web3) Authenticating Proxy"

[dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
base64 = "0.13.0"
hex = "0.4.3"
secp256k1 = "0.20.1"
structopt = "0.3.21"
strum = { version = "0.20.0", features = ["derive"] }
surf = "2.2.0"
tide = "0.16.0"
web3 = { version = "0.15.0", default-features = false, features = ["signing", "ws-async-std", "ws-tls-async-std", "url", "base64", "typed-headers", "eip-1193"] }
