[package]
name = "sig-proxy"
version = "0.3.1"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/sig-proxy/"
documentation = "https://docs.rs/sig-proxy/"
description = "Signature-Based (Web3) Authenticating Proxy"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
base64 = "0.13.0"
console = "0.14.1"
dialoguer = "0.8.0"
ethcontract = { version = "0.11.3", default-features = false, features = ["derive"] }
ethcontract-generate = "0.11.3"
heck = "0.3.2"
hex = "0.4.3"
secp256k1 = "0.20.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
strum = { version = "0.20.0", features = ["derive"] }
surf = { version = "2.2.0", default-features = false, features = ["middleware-logger", "encoding", "h1-client-rustls"] }
tide = "0.16.0"
web3 = { version = "0.15.0", default-features = false, features = ["signing", "ws-async-std", "url", "base64", "typed-headers", "eip-1193"] }
