[package]
name = "niftygate-asset"
version = "0.8.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/niftygate/"
documentation = "https://docs.rs/niftygate-asset/"
description = "Asset Manager for NiftyGate"

[features]
default = []
js-runtime = ["quick-js"]

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
brotli = "3.3.4"
camino = { version = "1.0.7", features = ["serde1"] }
dialoguer = "0.10.1"
digest = "0.10.3"
directories = "4.0.1"
flate2 = "1.0.23"
hex = { version = "0.4.3", features = ["serde"] }
humansize = "1.1.1"
indicatif = "0.16.2"
lazy_static = "1.4.0"
lz4_flex = "0.9.2"
platform-path = { version = "0.1.0", features = ["async", "serde1"] }
regex = "1.5.5"
resast = "0.4.1"
ressa = "0.7.6"
rustversion = "1.0.6"
semver = { version = "1.0.9", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.81"
sha2 = "0.10.2"
sha3 = "0.10.1"
structopt = "0.3.26"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.31"
url = "2.2.2"
vfs = "0.5.1"
walkdir = "2.3.2"

async-std = { version = "1.11.0", features = ["attributes"] }
async-trait = "0.1.53"
surf = { version = "2.3.2", default-features = false, features = [
  "middleware-logger",
  "encoding",
  "h1-client-rustls",
] }

quick-js = { version = "0.4.1", features = ["log"], optional=true }
# env_logger = "0.9.0"
# log = "0.4.14"
# log4rs = "1.0.0"
