[package]
name = "niftygate-bindgen"
version = "0.6.3"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/niftygate/"
documentation = "https://docs.rs/niftygate/"
description = "Generator of OpenZeppelin Bindings for NiftyGate"

[dependencies]
ethcontract = { version = "0.15.3", default-features = false, features = ["derive"] }
ethcontract-generate = "0.15.3"
heck = "0.3.3"
