[package]
name = "niftygate-bindgen"
version = "0.7.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/niftygate/"
documentation = "https://docs.rs/niftygate-bindgen/"
description = "Generator of OpenZeppelin Bindings for NiftyGate"

[dependencies]
anyhow = "1.0.43"
ethcontract = { version = "0.15.3", default-features = false, features = ["derive"] }
ethcontract-generate = "0.15.3"
heck = "0.3.3"
