[package]
name = "niftygate-bindgen"
version = "0.8.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/niftygate/"
documentation = "https://docs.rs/niftygate-bindgen/"
description = "Generator of OpenZeppelin Bindings for NiftyGate"

[dependencies]
anyhow = "1.0.57"
ethcontract = { version = "0.17.0", default-features = false, features = [
  "derive",
] }
ethcontract-generate = { version = "0.17.0", default-features = false }
heck = "0.4.0"
structopt = "0.3.26"
thiserror = "1.0.30"
