[package]
name = "niftygate-bindings"
version = "0.6.2"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/niftygate/"
documentation = "https://docs.rs/niftygate/"
description = "OpenZeppelin Bindings for NiftyGate"

[dependencies]
ethcontract = { version = "0.12.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", features = ["derive"] }
