[package]
name = "niftygate-bindings"
version = "0.7.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/niftygate/"
documentation = "https://docs.rs/niftygate-bindings/"
description = "OpenZeppelin Bindings for NiftyGate"

[dependencies]
ethcontract = { version = "0.15.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
