[package]
name = "niftygate-certificate"
version = "0.7.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/niftygate/"
documentation = "https://docs.rs/niftygate-certificate/"
description = "Standalone Certificate Utility for NiftyGate"

[dependencies]
anyhow = "1.0.43"
chrono = "0.4.19"
pem = "0.8.3"
rcgen = { version = "0.8.13", features = ["pem", "x509-parser"] }
structopt = "0.3.23"
thiserror = "1.0.29"
x509-parser = "0.11.0"
