[package]
name = "niftygate-certificate"
version = "0.8.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/colstrom/niftygate/"
documentation = "https://docs.rs/niftygate-certificate/"
description = "Standalone Certificate Utility for NiftyGate"

[dependencies]
anyhow = "1.0.57"
pem = "1.0.2"
rcgen = { version = "0.9.2", features = ["pem", "x509-parser"] }
structopt = "0.3.26"
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["serde-well-known"] }
x509-parser = "0.13.2"
