[package]
name = "niftygate-guide"
version = "0.8.0"
authors = ["Chris Olstrom <chris@olstrom.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colstrom/niftygate/"
documentation = "https://docs.rs/niftygate-guide/"
description = "NiftyGate's Interactive Guide"

[dependencies]
anyhow = "1.0.57"
console = "0.15.0"
dialoguer = "0.10.1"
structopt = "0.3.26"
